--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -18,13 +18,8 @@ body{background:rgba(50,4,4,1);}
 .right-0{right:0;}
 .navbar-nav .nav-link{width:80px;}
 .navbar-nav .logo{width:160px;}
-.dropdown-item:focus, .dropdown-item:hover {
-    background-color:rgba(255,255,255,.5);
-}
-.dropdown-menu {
-    background-color:#000;
-    border:1px solid rgba(228,167,0,1);
-}
+.dropdown-item:focus, .dropdown-item:hover {background-color:rgba(255,255,255,.5);}
+.dropdown-menu {background-color:#000;border:1px solid rgba(228,167,0,1);}
 .dropdown-item {color:#fff;max-width:60px;}
 .scroll .logo{width:100px;}
 .logo-img{top:-22px;left:0;}
@@ -57,10 +52,7 @@ footer{
     background:linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 65%, rgba(68,68,68,1) 100%);
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#444444",GradientType=1);
 }
-footer img{
-    -webkit-filter:drop-shadow(0px 0px 6px #FFD700);
-    max-width:200px;
-}
+footer img{-webkit-filter:drop-shadow(0px 0px 6px #FFD700);max-width:200px;}
 .leaderboard-img,
 .promotions-img,
 .contact-img,
@@ -141,7 +133,6 @@ footer img{
 
 
 /* new_index */
-/* .home-img{height:46vw;max-height:350px;} */
 .home-img .carousel-item{float:unset;height:23.44vw;margin-right:0;}
 .question .card{background:rgba(0,0,0,.75);border-color:#FFD700;}
 .question .card-header{background:rgba(136,4,4,.2);border-color:rgba(255,215,0,.5);}
@@ -150,11 +141,6 @@ footer img{
 .home .card{border:2px solid #FFD700;}
 .home .modal-content{background:rgba(136,4,4,1);border:2px solid #FFD700;}
 .home .modal-content{max-height:calc(100vh - 3.5rem);}
-
-/* share box fixed */
-/* .test{position:fixed;bottom:16px;right:0;display:flex;flex-direction:column;background:rgba(255,255,255,.25);width:60px;height:auto;padding:.5rem;border-radius:5px 0 0 5px;}
-.test a{margin:0 0 8px !important;width:100%;}
-.test img{width:100%;} */
 
 /* new_game */
 .game ul{height:270px;background:url(../images/Game-AW-WEB-BannerH-13012022.png) no-repeat bottom/cover;}
@@ -178,31 +164,21 @@ footer img{
 .game .modal-content{background:rgba(136,4,4,1);border:2px solid #FFD700;}
 .game .modal-content{max-height:calc(100vh - 3.5rem);}
 @media (min-width:767px){
-    .modal-dialog {
-        max-width:700px;
-    }
-    .position-pc-absolute{
-        position:absolute;
-    }
+    .modal-dialog {max-width:700px;}
+    .position-pc-absolute{position:absolute;}
 }
 @media (min-width:1023px){
-    .modal-dialog {
-        max-width:900px;
-    }
+    .modal-dialog {max-width:900px;}
 }
 @media (min-width:1279px){
-    .modal-dialog {
-        max-width:1080px;
-    }
+    .modal-dialog {max-width:1080px;}
 }
 
 /* new_promotions */
 
 
 /* Contact Us */
-.contact h4{
-    z-index:1;
-}
+.contact h4{z-index:1;}
 .cbtn{
     max-width:240px;
     font-size:22px;
@@ -227,9 +203,7 @@ footer img{
 
 /* Diamond */
 .diamond .container{z-index:2;}
-.opacity-4{
-    opacity:.4;
-}
+.opacity-4{opacity:.4;}
 .cloth::before{
     position:absolute;
     top:-28%;
@@ -245,15 +219,9 @@ footer img{
     text-align:center;
     padding:4px 0;
 }
-.popular.en::before{
-    content:'POPULAR';
-}
-.popular.th::before{
-    content:'สุดฮิต';
-}
-.best::before{
-    content:'BEST BUY';
-}
+.popular.en::before{content:'POPULAR';}
+.popular.th::before{content:'สุดฮิต';}
+.best::before{content:'BEST BUY';}
 
 @media screen and (max-width:992px) {
     main{margin-top:56px;}
@@ -267,7 +235,8 @@ footer img{
     h3{font-size:1.25rem;}
     .ph-w-100{width:100%!important;}
     .navbar-nav .nav-link{width:auto;}
-    .fixed-dl-bar {top:4px;left:0;width:146px;}
+    .fixed-dl-bar {top:4px;left:0;}
+    .fixed-dl-bar a {width: 100px;height: 40px;line-height: 40px;}
     .btnBox{width:120px;}
     .logo{top:0;left:calc(50% - 40px);width:80px;}
     .logo-img{top:0;}
