--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -163,6 +163,7 @@ footer img{-webkit-filter:drop-shadow(0px 0px 6px #FFD700);max-width:200px;}
 .game .card{border:2px solid #FFD700;}
 .game .modal-content{background:rgba(136,4,4,1);border:2px solid #FFD700;}
 .game .modal-content{max-height:calc(100vh - 3.5rem);}
+.pointer-events-n{pointer-events:none}
 @media (min-width:767px){
     .modal-dialog {max-width:700px;}
     .position-pc-absolute{position:absolute;}
