--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -130,6 +130,7 @@ footer img{-webkit-filter:drop-shadow(0px 0px 6px #FFD700);max-width:200px;}
     background:linear-gradient(0deg,rgba(136,4,4,1) 0%, rgba(110,4,4,1) 50%, rgba(136,4,4,1) 70%, rgba(233,4,4,1) 100%);
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#ded804",endColorstr="#e90404",GradientType=1);
 }
+.carousel-item.active{transform: translateX(0px);}
 
 
 /* new_index */
