--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -238,7 +238,7 @@ footer img{-webkit-filter:drop-shadow(0px 0px 6px #FFD700);max-width:200px;}
     .ph-w-100{width:100%!important;}
     .navbar-nav .nav-link{width:auto;}
     .fixed-dl-bar {top:4px;left:0;}
-    .fixed-dl-bar a {width: 100px;height: 40px;line-height: 40px;}
+    .fixed-dl-bar a {width: 100px;height: 40px;line-height: 40px;font-size: .75rem;}
     .btnBox{width:120px;}
     .logo{top:0;left:calc(50% - 40px);width:80px;}
     .logo-img{top:0;}
