--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -40,7 +40,8 @@ h1,h2,h3{white-space:nowrap;}
 .line::before{margin-right:1rem;}
 .line::after{margin-left:1rem;}
 .fixed-dl-bar{top:20px;left:0;z-index:100;}
-.fixed-dl-bar a{width:146px;height:48px;background:#a70403;border-radius:30px;color:#FF0;line-height:48px;text-align:center;font-family: 'Chonburi', cursive;font-weight:bolder;text-decoration:unset;-webkit-filter:drop-shadow(0px 0px 5px #FFD700);}
+.fixed-dl-bar a{width:146px;height:48px;background:#a70403;border-radius:30px;color:#FF0;line-height:48px;text-align:center;font-weight:bolder;text-decoration:unset;-webkit-filter:drop-shadow(0px 0px 5px #FFD700);}
+.th-wd{font-family: 'Chonburi', cursive;}
 .fixed-dl-bar a:hover{box-shadow:0 0 10px #000 inset;}
 .fixed-dl-solid{bottom:0;right:0;z-index:20;}
 .btnBox{width:160px;}
