--- a/css/custom_new.css
+++ b/css/custom_new.css
@@ -196,9 +196,9 @@ footer img{-webkit-filter:drop-shadow(0px 0px 6px #FFD700);max-width:200px;}
 .ln{fill:#3fbc01;color:#3fbc01;border-color:#3fbc01;}
 .tw{fill:#00b2ef;color:#00b2ef;border-color:#00b2ef;}
 .cbtn:hover{text-decoration:none;}
-.fb:hover{color:#1976d2;opacity:.75;}
-.ln:hover{color:#3fbc01;opacity:.75;}
-.tw:hover{color:#00b2ef;opacity:.75;}
+.fb:hover{color:#1976d2;text-decoration:none;opacity:.75;}
+.ln:hover{color:#3fbc01;text-decoration:none;opacity:.75;}
+.tw:hover{color:#00b2ef;text-decoration:none;opacity:.75;}
 .cbtn img{width:30px;height:30px;}
 
 /* Leaderboard */
